--- a/app/src/main/res/layout/activity_activity_screen2.xml
+++ b/app/src/main/res/layout/activity_activity_screen2.xml
@@ -7,9 +7,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Activities">
+        android:text="Activities"
+        android:textSize="50sp">
     </TextView>
 
     <ListView
