--- a/app/src/main/res/layout/fragment_make_account.xml
+++ b/app/src/main/res/layout/fragment_make_account.xml
@@ -1,113 +1,108 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="12dp"
     tools:context="jwake.myapplication.MakeAccount$PlaceholderFragment">
 
-    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/section_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/MakeYourAccountTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Make Your Account"
-        android:id="@+id/textView4"
-        android:layout_alignTop="@+id/section_label"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/section_label"
+        android:text="Make Your Account"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="36dp" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/ParentNameEdit"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ParentInfoText"
+        android:layout_marginTop="40dp"
+        android:hint="Name"
+        android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/textView5"
-        android:layout_toRightOf="@+id/section_label"
-        android:layout_toEndOf="@+id/section_label" />
+        android:paddingLeft="10dp"/>
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/ParentAgeEdit"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ParentNameEdit"
+        android:ems="10"
+        android:hint="Age"
         android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:text="Age"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:singleLine="true"
+        android:paddingLeft="10dp"/>
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/ParentGenderEdit"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:text="Gender"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_below="@+id/ParentAgeEdit"
+        android:ems="10"
+        android:hint="Gender"
+        android:singleLine="true"
+        android:paddingLeft="10dp"/>
 
     <TextView
+        android:id="@+id/ParentInfoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_below="@+id/MakeYourAccountTitle"
         android:text="Parent Information"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="32dp" />
 
     <TextView
+        android:id="@+id/ChildInfoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Child Information"
-        android:id="@+id/textView6"
-        android:textSize="32dp"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:id="@+id/editText4"
+        android:layout_below="@+id/ParentGenderEdit"
         android:layout_marginTop="45dp"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="Child Information"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="32dp" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/ChildNameEdit"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:layout_below="@+id/ChildInfoText"
+        android:layout_marginTop="45dp"
         android:ems="10"
-        android:id="@+id/editText5"
-        android:text="Age"
-        android:layout_below="@+id/editText4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:singleLine="true"
+        android:paddingLeft="10dp"/>
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/ChildAgeEdit"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText6"
-        android:text="Gender"
-        android:layout_below="@+id/editText5"
-        android:layout_toRightOf="@+id/section_label"
-        android:layout_alignRight="@+id/editText5"
-        android:layout_alignEnd="@+id/editText5" />
+        android:layout_below="@+id/ChildNameEdit"
+        android:ems="10"
+        android:hint="Age"
+        android:inputType="number"
+        android:singleLine="true"
+        android:paddingLeft="10dp"/>
+
+    <EditText
+        android:id="@+id/ChildGenderEdit"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ChildAgeEdit"
+        android:ems="10"
+        android:hint="Gender"
+        android:singleLine="true"
+        android:paddingLeft="10dp"/>
 
 </RelativeLayout>
