--- a/app/src/main/res/layout/fragment_intro_screen.xml
+++ b/app/src/main/res/layout/fragment_intro_screen.xml
@@ -36,5 +36,6 @@
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="onNextClick" />
 </RelativeLayout>
