linked buttons home > activity screen > results > home

--- a/app/src/main/res/layout/fragment_results_screen.xml
+++ b/app/src/main/res/layout/fragment_results_screen.xml
@@ -41,7 +41,8 @@
         android:text="Finish"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="onFinishClicked"/>
 
 
 </RelativeLayout>
