--- a/app/src/main/res/layout/fragment_activity_screen.xml
+++ b/app/src/main/res/layout/fragment_activity_screen.xml
@@ -17,7 +17,9 @@
         android:layout_height="match_parent"
         android:layout_below="@id/textView2"
         android:id="@+id/listView"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/button"
+        android:drawSelectorOnTop="false">
     </ListView>
 
 
@@ -37,6 +39,7 @@
         android:id="@+id/button2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:onClick="onFinishClicked"/>
 
 </RelativeLayout>
