--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -6,12 +6,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jwake.myapplication.HomeScreen$PlaceholderFragment">
+    android:background="@drawable/gradient_bg"
+    tools:context="jwake.myapplication.HomeScreen$PlaceholderFragment"
+    android:id="@+id/Home">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/ActivityButton"
