--- a/app/src/main/res/layout/fragment_results_screen.xml
+++ b/app/src/main/res/layout/fragment_results_screen.xml
@@ -1,11 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_results_screen"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="jwake.myapplication.ResultsScreen$PlaceholderFragment"
-    android:id="@+id/fragment_results_screen">
+    tools:context="jwake.myapplication.ResultsScreen$PlaceholderFragment">
 
     <TextView
         android:id="@+id/textView2"
@@ -14,35 +16,33 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Activity"
-        android:textSize="50dp">
-    </TextView>
+        android:textSize="50dp"></TextView>
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView"
-        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/graph"
         android:layout_below="@+id/textView2"
-        android:layout_above="@+id/graph">
-    </ListView>
+        android:layout_centerHorizontal="true"></ListView>
 
     <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:id="@+id/graph"
         android:layout_above="@+id/button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
+        android:id="@+id/button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Finish"
-        android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onFinishClicked"/>
+        android:onClick="onFinishClicked"
+        android:text="Finish" />
 
 
 </RelativeLayout>
