customized buttons, started database

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -18,6 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="onActivityClicked"
+        android:background="@drawable/custom_button"
         android:text="Activity" />
 
     <Button
@@ -28,6 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="88dp"
         android:onClick="onRecordsClicked"
+        android:background="@drawable/custom_button"
         android:text="Records" />
 
 </RelativeLayout>
