--- a/app/src/main/res/layout/fragment_end_task.xml
+++ b/app/src/main/res/layout/fragment_end_task.xml
@@ -12,6 +12,7 @@
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
         android:onClick="onFinishClicked"
+        android:background="@drawable/custom_button"
         android:text="Finish" />
 
     <Button
