--- a/app/src/main/res/layout/fragment_intro_screen.xml
+++ b/app/src/main/res/layout/fragment_intro_screen.xml
@@ -34,11 +34,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:onClick="onNextClick"
+        android:background="@drawable/custom_button"
         android:text="Next" />
 </RelativeLayout>
