--- a/app/src/main/res/layout/fragment_make_account.xml
+++ b/app/src/main/res/layout/fragment_make_account.xml
@@ -164,11 +164,12 @@
             <Button
                 android:id="@+id/FinishButton"
                 android:layout_below="@+id/ChildContainer"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_alignParentRight="true"
                 android:onClick="onFinishButtonClick"
+                android:background="@drawable/custom_button"
                 android:text="Finish" />
         </RelativeLayout>
     </ScrollView>
