--- a/app/src/main/res/layout/fragment_results_screen.xml
+++ b/app/src/main/res/layout/fragment_results_screen.xml
@@ -42,6 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="onFinishClicked"
+        android:background="@drawable/custom_button"
         android:text="Finish" />
 
 
