--- a/app/src/main/res/layout/fragment_task_instructions.xml
+++ b/app/src/main/res/layout/fragment_task_instructions.xml
@@ -17,11 +17,12 @@
 
     <Button
         android:id="@+id/TINextButton"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:background="@drawable/custom_button"
         android:text="Next" />
 
     <Button
