--- a/app/src/main/res/layout/fragment_intro_screen.xml
+++ b/app/src/main/res/layout/fragment_intro_screen.xml
@@ -10,34 +10,38 @@
     android:background="@drawable/gradient_bg"
     tools:context="jwake.myapplication.IntroScreen$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/textView2"
+    <RelativeLayout
+        android:id="@+id/TextContainer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="Introduction"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="54dp" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="Introduction"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="54dp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="35dp"
-        android:text="@string/introparagraph"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView2"
+            android:layout_marginTop="35dp"
+            android:text="@string/introparagraph"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </RelativeLayout>
     <Button
-        android:id="@+id/button"
+        android:id="@+id/nextButton"
+        android:layout_below="@+id/TextContainer"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
         android:layout_alignParentRight="true"
         android:onClick="onNextClick"
         android:background="@drawable/custom_button"
