--- a/app/src/main/res/layout/fragment_intro_screen.xml
+++ b/app/src/main/res/layout/fragment_intro_screen.xml
@@ -10,20 +10,23 @@
     android:background="@drawable/gradient_bg"
     tools:context="jwake.myapplication.IntroScreen$PlaceholderFragment">
 
-    <RelativeLayout
-        android:id="@+id/TextContainer"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Introduction"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginBottom="20dp"
+        android:textSize="48dp" />
+
+    <ScrollView
+        android:id="@+id/ScrollView"
+        android:layout_below="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Introduction"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="54dp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -32,16 +35,16 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView2"
-            android:layout_marginTop="35dp"
             android:text="@string/introparagraph"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-    </RelativeLayout>
+    </ScrollView>
+
     <Button
         android:id="@+id/nextButton"
-        android:layout_below="@+id/TextContainer"
+        android:layout_below="@+id/ScrollView"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_alignParentRight="true"
         android:onClick="onNextClick"
         android:background="@drawable/custom_button"
