Results page tasks/ratings

--- a/app/src/main/res/layout/fragment_results_screen.xml
+++ b/app/src/main/res/layout/fragment_results_screen.xml
@@ -22,9 +22,10 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/graph"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"></ListView>
+        android:layout_centerHorizontal="true"
+        android:entries="@array/shopping_tasks"
+        android:layout_above="@+id/ratingBar"></ListView>
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph"
@@ -44,6 +45,15 @@
         android:onClick="onFinishClicked"
         android:background="@drawable/custom_button"
         android:text="Finish" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ratingBar"
+        android:layout_above="@+id/graph"
+        android:layout_centerHorizontal="true"
+        android:stepSize="1"
+        android:numStars="5"/>
 
 
 </RelativeLayout>
