--- a/app/src/main/res/layout/fragment_activity_screen.xml
+++ b/app/src/main/res/layout/fragment_activity_screen.xml
@@ -30,6 +30,7 @@
         android:text="Finish"
         android:id="@+id/button2"
         android:background="@drawable/custom_button"
+        android:textColor="#fff"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
