--- a/app/src/main/res/layout/fragment_end_task.xml
+++ b/app/src/main/res/layout/fragment_end_task.xml
@@ -9,20 +9,13 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
         android:layout_centerHorizontal="true"
         android:onClick="onFinishClicked"
         android:background="@drawable/custom_button"
+        android:textColor="#fff"
         android:text="Finish" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Back" />
 
     <TextView
         android:id="@+id/textView"
