--- a/app/src/main/res/layout/fragment_results_screen.xml
+++ b/app/src/main/res/layout/fragment_results_screen.xml
@@ -44,6 +44,7 @@
         android:layout_centerHorizontal="true"
         android:onClick="onFinishClicked"
         android:background="@drawable/custom_button"
+        android:textColor="#fff"
         android:text="Finish" />
 
     <RatingBar
