--- a/app/src/main/res/layout/fragment_about_screen.xml
+++ b/app/src/main/res/layout/fragment_about_screen.xml
@@ -8,8 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/gradient_bg"
-    tools:context="jwake.myapplication.AboutScreen$PlaceholderFragment"
-    >
+    tools:context="jwake.myapplication.AboutScreen$PlaceholderFragment">
 
     <TextView
         android:id="@+id/textView2"
@@ -21,17 +20,19 @@
         android:text="About My Lil Sidekick"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="40dp" />
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2">
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/aboutparagraph"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/aboutparagraph"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_below="@+id/textView2"
+            android:layout_centerHorizontal="true" />
     </ScrollView>
 </RelativeLayout>
